$Id$


				MBSEBBS History.


v0.35.05	19-Oct-2002

	upgrade:
		Start mbsetup, go into global configuration, leave it and 
		save.

	general:
		This may become release 0.36.00
		There is now a mberrors.h file that defines all errorcodes
		returned by all programs.

	mbcico:
		Fixed crash with incoming YooHoo session with bad password.

	mbmsg:
		The summary counters in the logfile are increased to 6 digits.

	mbsetup:
		When installing the default unarchivers (new installations)
		the rar is used to unarchive instead of unrar when available,
		rar is compiled static and prefered.
		Added support for the nomarch unarchiver.
		Removed from Screen 1.13 the unused switches Res Future and
		Repl ext. Fixed some help texts.
		Added in screen 1.14 settings for Plus All, Notify, Passwd and
		Pause.

	mbfido:
		With ticfile processing, the KeepDate setup setting now works.
		The FileMgr requests now honor the setting of the switches
		Plus All, Notify, Passwd, Message, Tic on/off and Pause.
		The AreaMgr reuqests now honor the setting of the switches
		Plus All, Notify, Passwd and Pause.


v0.35.04	29-Sep-2002 - 19-Oct-2002.

	general:
		Added mail and files security flags for nodes.

	upgrade:
		Start mbsetup, enter global configuration and exit and save.
		This will set defaults for area-/filemgr logging and security.
		The noderecords are updated with new security flags.
		The filegroups, ticgroups, tic areas and message areas are 
		updated with default security flags.

        clcomm.a:
                Added Mgrlog function, logs default to manager.log. Does also
                log to Syslog with level '+'.

	mbfido:
		Area- and FileMgr requests are now also logged in manager.log
                Auto created and removed areas are also logged in manager.log
		Auto created area now get the link security from the group.
		With message areas auto update it should now only delete
		missing echomail areas.
		File attaches to our own points were placed in the node's